// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props exportedFieldsUrl 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  component="div"
  direction="row"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={true}
  >
    <EuiFlexGroup
      alignItems="center"
      component="div"
      direction="row"
      gutterSize="s"
      justifyContent="flexStart"
      responsive={true}
      wrap={false}
    >
      <EuiFlexItem
        component="div"
        grow={false}
      />
      <EuiFlexItem
        component="div"
        grow={false}
      >
        <EuiTitle
          size="l"
          textTransform="none"
        >
          <h2>
            Great tutorial
              
          </h2>
        </EuiTitle>
      </EuiFlexItem>
    </EuiFlexGroup>
    <Content
      text="this is a great tutorial about..."
    />
    <div>
      <EuiSpacer
        size="l"
      />
      <EuiButton
        color="primary"
        fill={false}
        href="exported_fields_url"
        iconSide="left"
        rel="noopener noreferrer"
        target="_blank"
        type="button"
      >
        <FormattedMessage
          defaultMessage="View exported fields"
          id="kbn.home.tutorial.introduction.viewButtonLabel"
          values={Object {}}
        />
      </EuiButton>
    </div>
  </EuiFlexItem>
  <EuiFlexItem
    component="div"
    grow={false}
  />
</EuiFlexGroup>
`;

exports[`props iconType 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  component="div"
  direction="row"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={true}
  >
    <EuiFlexGroup
      alignItems="center"
      component="div"
      direction="row"
      gutterSize="s"
      justifyContent="flexStart"
      responsive={true}
      wrap={false}
    >
      <EuiFlexItem
        component="div"
        grow={false}
      >
        <EuiIcon
          size="xl"
          style={
            Object {
              "marginRight": 16,
            }
          }
          type="logoElastic"
        />
      </EuiFlexItem>
      <EuiFlexItem
        component="div"
        grow={false}
      >
        <EuiTitle
          size="l"
          textTransform="none"
        >
          <h2>
            Great tutorial
              
          </h2>
        </EuiTitle>
      </EuiFlexItem>
    </EuiFlexGroup>
    <Content
      text="this is a great tutorial about..."
    />
  </EuiFlexItem>
  <EuiFlexItem
    component="div"
    grow={false}
  />
</EuiFlexGroup>
`;

exports[`props isBeta 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  component="div"
  direction="row"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={true}
  >
    <EuiFlexGroup
      alignItems="center"
      component="div"
      direction="row"
      gutterSize="s"
      justifyContent="flexStart"
      responsive={true}
      wrap={false}
    >
      <EuiFlexItem
        component="div"
        grow={false}
      />
      <EuiFlexItem
        component="div"
        grow={false}
      >
        <EuiTitle
          size="l"
          textTransform="none"
        >
          <h2>
            Great tutorial
              
            <EuiBetaBadge
              label="Beta"
              tooltipPosition="top"
            />
          </h2>
        </EuiTitle>
      </EuiFlexItem>
    </EuiFlexGroup>
    <Content
      text="this is a great tutorial about..."
    />
  </EuiFlexItem>
  <EuiFlexItem
    component="div"
    grow={false}
  />
</EuiFlexGroup>
`;

exports[`props previewUrl 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  component="div"
  direction="row"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={true}
  >
    <EuiFlexGroup
      alignItems="center"
      component="div"
      direction="row"
      gutterSize="s"
      justifyContent="flexStart"
      responsive={true}
      wrap={false}
    >
      <EuiFlexItem
        component="div"
        grow={false}
      />
      <EuiFlexItem
        component="div"
        grow={false}
      >
        <EuiTitle
          size="l"
          textTransform="none"
        >
          <h2>
            Great tutorial
              
          </h2>
        </EuiTitle>
      </EuiFlexItem>
    </EuiFlexGroup>
    <Content
      text="this is a great tutorial about..."
    />
  </EuiFlexItem>
  <EuiFlexItem
    component="div"
    grow={false}
  >
    <EuiImage
      allowFullScreen={true}
      alt="screenshot of primary dashboard."
      fullScreenIconColor="dark"
      hasShadow={true}
      size="l"
      url="preview_image_url"
    />
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`render 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  component="div"
  direction="row"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={true}
  >
    <EuiFlexGroup
      alignItems="center"
      component="div"
      direction="row"
      gutterSize="s"
      justifyContent="flexStart"
      responsive={true}
      wrap={false}
    >
      <EuiFlexItem
        component="div"
        grow={false}
      />
      <EuiFlexItem
        component="div"
        grow={false}
      >
        <EuiTitle
          size="l"
          textTransform="none"
        >
          <h2>
            Great tutorial
              
          </h2>
        </EuiTitle>
      </EuiFlexItem>
    </EuiFlexGroup>
    <Content
      text="this is a great tutorial about..."
    />
  </EuiFlexItem>
  <EuiFlexItem
    component="div"
    grow={false}
  />
</EuiFlexGroup>
`;
